[tool.poetry]
name = "desdeo-dash-deploy"
version = "0.1.0"
description = "For deploying desdeo-dash through WSGI."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
desdeo-dash = { git = "https://github.com/gialmisi/desdeo-dash", branch = "master" }

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
